<resources>
    <string name="app_name">Tafakari na Yesu</string>
    <string name="action_settings">Mipangilio</string>
    <string name="title_activity_main_tab">MainActivityTab</string>
    <string name="tab_text_1">Masomo</string>
    <string name="tab_text_2">Ujumbe</string>
    <string name="tab_text_3">jadili</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="masomo_title">Title</string>
    <string name="description">Description</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Endelea Mbele</string>
    <string name="dummy_content">karibu Tafakari na bwana application</string>


    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Jisajili</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Tuma</string>
    <string name="verify_phone_auth">Hakiki</string>
    <string name="resend_phone_auth">Tuma tena</string>
    <string name="hint_phone_number">+255000000000</string>
    <string name="hint_verification_code">Hakiki code</string>
    <string name="status_code_sent">code Zmetumwa </string>
    <string name="status_verification_failed">Code siyo sahihi? Tafadhali ingiza code sahihi</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Jisajili Kwa namba ya simu</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="welcome_word">Karibu Tafakari na yesu App \n Karibu Tujifunze neno la MUNGU</string>
    <string name="next">next</string>
    <string name="skip">skip</string>
    <string name="first_layout_introduction">Hi, Karibu Tafakari na yesu application\nTellwap developers</string>
    <string name="second_layout_introduction">Ingawaje mwanadamu anatafuta ukweli daima, lakini yeye ni sababu yakuto kuutambua.Ukweli ni kitu gani[Yn 18:38],Tafakari na yesu ndio majibu.</string>
    <string name="third_layout_introduction">Jifunze masomo ya misa ya kila siku,sala na tafakari zake kupitia Tafakari na yesu. Bwana, niimarishe mimi katika utume wangu kama nabii nihubiri ujumbe wako.</string>
    <string name="register_guide">Kujisajili Tafakari na yesu Ingiza namba ya simu, baada ya kuweka bonyeza Kitufe kilichoandikwa tuma baada ya hapo utapokea ujumbe wa message wenye code namba ambazo utatakiwa kuzijaza then utabonyeza kitufe kilichoandikwa hakiki. kama message itachelewa bonyeza kitufe cha tuma tena baada ya dakika moja tangu ulipotuma</string>
    <string name="hi">hi</string>
    <string name="how_are_you_doing_this_is_a_long_message_that_should_probably_wrap">How are you doin should pr</string>

</resources>
