<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_margin="20dp"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp">

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/phone_auth_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2.0">

                <EditText
                    android:id="@+id/field_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:background="@drawable/input_background"
                    android:hint="@string/hint_phone_number"
                    android:inputType="phone"
                    android:padding="15dp"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/field_verification_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:background="@drawable/input_background"
                    android:hint="@string/hint_verification_code"
                    android:inputType="number"
                    android:padding="15dp"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3.0">

                <Button
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:id="@+id/button_start_verification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/start_phone_auth"/>

                <Button
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:id="@+id/button_verify_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/verify_phone_auth"/>

                <Button
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:id="@+id/button_resend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/resend_phone_auth"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signed_in_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:weightSum="1.0">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/sign_out"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="15dp"
              android:fontFamily="sans-serif"
              android:text="Muhimu"
              android:textColor="@android:color/black"
              android:textSize="20sp" />

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="15dp"
              android:fontFamily="sans-serif"
              android:text="@string/register_guide"
              android:textColor="@android:color/black"
              android:textSize="20sp" />

      </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>

</LinearLayout>

